release 1.5 (11-2010)
- Fixed issue 598
  https://jersey.dev.java.net/issues/show_bug.cgi?id=598
  The Vary header is set if a call to Request.selectVariant is called.
- Fixed issue 600
  https://jersey.dev.java.net/issues/show_bug.cgi?id=600
  Report errors if CDI-based Jersey injection targets for cannot be obtained.
- Fixed issue 597
  https://jersey.dev.java.net/issues/show_bug.cgi?id=597
  The Errors class correctly cleans up the thread local state to stop
  class loader leaking when deploying Web applications.
- Fixed issue 522
  https://jersey.dev.java.net/issues/show_bug.cgi?id=522
  The Request.selectVariant supports the quality of source "qs" parameter on
  media type variant.
- Fixed issue 206
  https://jersey.dev.java.net/issues/show_bug.cgi?id=206
  WADL resource params must also be supported 
  for resource class fields or resource class bean properties
- Fixed issue 289
  https://jersey.dev.java.net/issues/show_bug.cgi?id=289
  The filter init param "com.sun.jersey.config.feature.FilterContextPath" can
  be used to declare a filter context path.
  For example if the URL pattern of the Jersey configured filter is
  "/filterContext/*" and the param value is "/filterContext" then the base URI
  of the application is defined to be
  "http(s)://host:port/contextPath/filterContextPath/".
  Note that an init param is required because the Servlet 2.x API does not
  provide access to the URI pattern defined in the web.xml.
- Fixed issue 452
  https://jersey.dev.java.net/issues/show_bug.cgi?id=452
  It is an error if a resource class is annotated with more than one
  Jersey-based scope annotation e.g. @Singleton and @PerRequest.
- Fixed issue 595
  https://jersey.dev.java.net/issues/show_bug.cgi?id=595
  When mapping exceptions to responses if the Log level is FINE when the
  exception will be logged. This changes the current behaviour where the
  exception was logged when tracing was enabled. Thus when Jersey is used